@@ -11,7 +11,7 @@ description: >
 
 ## 1. Trino?
 
-PrestoSQL로 알려졌던 빅 데이터용 분산 SQL 쿼리 엔진  
+PrestoSQL로 알려졌던 빅데이터용 분산 SQL 쿼리 엔진  
 PrestoSQL에서 Trino로 프로젝트명이 변경되었다.  
 Facebook에서 개발된 Presto가 점점 Facebook에 종속되어 간다고 느낀 몇몇 개발진들이 나와서  
 완전한 오픈소스로 다시 만들어낸 뭐 그런 느낌  
@@ -36,6 +36,49 @@ On-premise 환경의 Rocky 8 OS에 설치한다.
 ```
 igkim     soft    nofile  131072
 igkim     hard    nofile  131072
+```
+
+#### 2.2. 설치 및 환결 설정
+
+* 다운로드 및 압축 해제(압축 푼 디렉토리를 $TRINO_HOME 으로 정의한다.)  
+https://repo1.maven.org/maven2/io/trino/trino-server/392/trino-server-392.tar.gz
+
+* 노드 설정
+```
+[igkim@trino ~]$ vi $TRINO_HOME/etc/node.properties
+```
+```
+# Cluster name (소문자 영숫자 문자로 시작해야 하며 소문자 영숫자 또는 밑줄(_) 문자만 포함할 수 있다.)
+node.environment=production
+
+# 해당 node name (영숫자 문자로 시작해야 하며 영숫자, - 또는 _ 문자만 포함할 수 있다.)
+node.id=trino-coordinator
+
+# Log 및 기타 데이터 저장 경로
+node.data-dir=/var/trino/data
+```
+
+* JVM 설정
+```
+[igkim@trino ~]$ vi $TRINO_HOME/etc/jvm.config
+```
+```
+-server
+-Xmx16G
+-XX:InitialRAMPercentage=80
+-XX:MaxRAMPercentage=80
+-XX:G1HeapRegionSize=32M
+-XX:+ExplicitGCInvokesConcurrent
+-XX:+ExitOnOutOfMemoryError
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:-OmitStackTraceInFastThrow
+-XX:ReservedCodeCacheSize=512M
+-XX:PerMethodRecompilationCutoff=10000
+-XX:PerBytecodeRecompilationCutoff=10000
+-Djdk.attach.allowAttachSelf=true
+-Djdk.nio.maxCachedBufferSize=2000000
+-XX:+UnlockDiagnosticVMOptions
+-XX:+UseAESCTRIntrinsics
 ```
 
 
